--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,15 @@
 services:
   - type: web
-    name: carambar-api
-    plan: free
+    name: carambar-backend
     runtime: docker
-
-    buildCommand: ""
-    startCommand: ""
-
+    plan: free
+    repo: https://github.com/FATOU27/carambar-backend
+    region: frankfurt
+    dockerfilePath: Dockerfile
     envVars:
-      - key: SPRING_PROFILES_ACTIVE
-        value: render
+      - key: SPRING_DATASOURCE_URL
+        value: jdbc:mysql://<your-railway-host>:3306/<dbname>?useSSL=false&serverTimezone=UTC
+      - key: SPRING_DATASOURCE_USERNAME
+        value: <username>
+      - key: SPRING_DATASOURCE_PASSWORD
+        value: <password>
